--- a/style.css
+++ b/style.css
@@ -128,16 +128,20 @@ header * {
    background: #f4f4f4;
 }
 
-#about .title{
+#about .title,
+#offers .title{
     text-align: center;
     margin-bottom: 4rem;
 
 }
+#about h2 {
+    color :#383848;
+}
 
-#about h2{
+#about h2
+{
     font-size: 40px;
-    color: #383838;
-    margin-bottom: 20px;
+    margin-bottom: 20px; 
 }
 
 #about .title p {
@@ -162,3 +166,255 @@ header * {
     font-weight: 500;
     line-height: 1.6;
 }
+/*About Start*/
+
+/* Offers Start */
+#offers {
+    height: 80vh;
+    display: felx;
+    justify-content: center;
+    background: url('./img/offer-background.jpg') center center/cover fixed ;
+}
+
+#offers h2{
+    color: #e4b95b;
+        font-size: 40px;
+    margin-bottom: 20px;
+}
+#offers .title p {
+    color: #fff;
+    font-weight: 500;
+}
+
+#offers .offers-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #fff;
+}
+
+#offers .offers-items img{
+    width: 200px;
+
+}
+
+#offers .offers-items h3 {
+    font-size: 25px;
+    margin: 15px 0;
+}
+
+#offers .offers-items p{
+    font-size: 14px;
+    padding: 0 20px;
+    font-weight: 300;
+    margin-bottom: 15px;
+}
+#offers .offers-items span{
+    font-size: 18px;
+    font-weight: 600;
+    margin-left: 5px;
+}
+/* Offers End */
+
+/* Menu Start */
+#menu {
+    background: #f4f4f4;
+    padding: 5rem 0;
+}
+#menu .title{
+    text-align: center;
+    margin-bottom: 4rem;
+}
+
+#menu h2{
+    font-size: 40px;
+    margin-bottom: 20px;
+    color: #383848;
+}
+
+#menu .title p{
+    font-size: 14px;
+    color: #9a9a9a;
+    font-weight: 600;
+}
+
+#menu .menu-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+#menu .menu-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 40px;
+}
+
+
+#menu .menu-items .menu-item img {
+    width: 80px;
+    border-radius: 50%;
+    margin: 20px;
+}
+#menu .menu-items .menu-item h3 {
+    color: #383848;
+    border-bottom: 1px dashed #c2dbdb;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+#menu .menu-items .menu-item span {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+#menu .btn {
+    display: block;
+    margin: 20px auto 0;
+    background: #e4b95b;
+    color: #fff;
+    cursor: pointer;
+
+}
+
+#menu .btn:hover{
+    background: #383848;
+}
+/* Menu End */
+
+ /*Day time Start*/
+ #daytime {
+    background: url(./img/daytime_bg.jpeg) center center/cover fixed no-repeat;
+    color: #fff;
+    text-align: center;
+ }
+#daytime .daytime-items{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 40vh;
+}
+
+#daytime .daytime-items h3 {
+    font-size: 32px;
+    margin: 20px 0 10px;
+}
+
+#daytime .daytime-items p{
+    font-weight: 500;
+}
+
+/*Day time End*/
+
+/*Gallery Start*/
+#gallery {
+    background: url('./img/offer-background.jpg') center center/cover no-repeat;
+    padding: 8rem 0 6rem;
+}
+#gallery h2{
+    color: #fff;
+    font-size: 40px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+#gallery .img-gallery{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#gallery .img-gallery img{
+    width: 280px;
+    height: 200px;
+    border-radius: 15px;
+    margin: 20px;
+    opacity: 0.8;
+}
+
+#gallery .img-gallery img:hover{
+    opacity: 1;
+}
+/*Gallery End*/
+
+/*contact start*/
+#contact{
+    padding: 5rem 0;
+    background: #f4f4f4;
+}
+
+#contact .container {
+    max-width: 900px;
+}
+
+#contact .contact-content{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#contact .contact-content .contact-info {
+    width: 50%;
+}
+
+#contact .contact-content .contact-info div{
+    margin: 30px 0;
+    line-height: 1.7;
+}
+
+#contact .contact-content .contact-info h3{
+    font-size: 28px;
+    color: #383848;
+    margin-bottom: 10px;
+}
+
+#contact .contact-content .contact-info p{
+    color: #9a9a9a;
+}
+#contact .contact-content .contact-info i{
+    color: #e4b95b;
+    margin-right: 5px;
+}
+
+#contact .contact-content .contact-info a i{
+    color: #fff;
+    background-color: #383848;
+    padding: 15px;
+    border-radius: 50%;
+    font-size: 20px;
+}
+
+#contact .contact-content .contact-info a i:hover{
+    background-color: #e4b95b;
+    color: #383848;
+}
+
+form{
+    width: 50%;
+}
+form input,
+textarea
+{
+    display: block;
+    width: 100%;
+    padding: 20px 15px;
+    margin: 20px 0;
+    border: none;
+    background-color: #e3e2dd;
+}
+
+#contact .btn{
+    background: #e4b95b;
+    color: #fff;
+    cursor : pointer;
+}
+#contact .btn:hover{
+    background-color: #383848;
+}
+/*contact end*/
+
